--- a/.github/wordflows/ci.yml
+++ b/.github/wordflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --remote-branch docs --clean
+      - run: mkdocs gh-deploy --clean
