--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
-      - run: uv pip install -r requirements.txt
+      - run: uv sync
       - run: mkdocs gh-deploy --clean --force
