run mkdocs under uv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           enable-cache: true
       - run: uv sync
-      - run: mkdocs gh-deploy --clean --force
+      - run: uv run mkdocs gh-deploy --clean --force
