--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,9 @@ nav:
       - Setup: server/setup.md
       - Usage: server/usage.md
       - Tips: server/tips.md
+      - Guides:
+          - Overview: server/guides/index.md
+          - LLM: server/guides/llms.md
 #   <a href="#__consent">Change cookie settings</a>
 # extra:
 #   consent:
