Add ucloud guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,7 @@ nav:
       - Guides:
           - Overview: server/guides/index.md
           - LLMs: server/guides/llms.md
+          - UCloud: server/guides/ucloud.md
   - Cheatsheets:
       - Overview: cheatsheets/index.md
       - Communication: cheatsheets/communication.md
